syntax = "proto3";

package whatsapp.media;

option csharp_namespace = "Web.Proto.Media";



service Media {
  rpc UploadProfileImage (UploadProfileImageRequest) returns (UploadProfileImageReply);
  rpc UploadChatFile (UploadChatFileRequest) returns (UploadChatFileReply);
}

message UploadProfileImageRequest {
  string user_id = 1;
  bytes image = 2;
  string extension = 3;
}

message UploadChatFileRequest {
  string user_id = 1;
  repeated bytes files = 2;
  string extension = 3;
}

message UploadProfileImageReply {
  string profile_image_url = 1;
}

message UploadChatFileReply {
  repeated string image_url = 1;
}
